<!--This is the layout of the app in XML code.
Created by Bobby Nguyen
version: April 28th, 2019-->

<?xml version="1.0" encoding="utf-8"?
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/fillInPItch"
        android:layout_width="263dp"
        android:layout_height="0dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:text="@string/please_fill_the_blanks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#71EDE3"
        android:textSize="25sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="303dp"
        android:layout_height="83dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="24dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#CDDC39"
        android:textSize="60sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/fillInPItch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="319dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#71EDE3"
        android:textSize="60sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="@+id/welcome2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/billAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/bill_amount"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillInPItch" />

    <TextView
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/round_to"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="@+id/billAmount"
        app:layout_constraintTop_toBottomOf="@+id/percentAmount" />

    <TextView
        android:id="@+id/percentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/percentage"
        android:textColor="#FDFDFD"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="@+id/billAmount"
        app:layout_constraintTop_toBottomOf="@+id/billAmount" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="215dp"
        android:background="#8BC34A"
        android:text="@string/calculate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FAF9F9"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundToText"
        app:layout_constraintVertical_bias="0.506" />

    <EditText
        android:id="@+id/percentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="00"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#CDDC39"
        android:textColorLink="#CDDC39"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintStart_toStartOf="@+id/billAmountTxt"
        app:layout_constraintTop_toBottomOf="@+id/billAmountTxt"
        app:backgroundTint="#ffffff"/>

    <EditText
        android:id="@+id/roundToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFEB3B"
        android:textColorLink="#CDDC39"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintStart_toStartOf="@+id/billAmountTxt"
        app:layout_constraintTop_toBottomOf="@+id/percentTxt"
        app:backgroundTint="#ffffff"/>

    <EditText
        android:id="@+id/billAmountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFEB3B"
        android:textColorLink="#CDDC39"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillInPItch"
        app:backgroundTint="#ffffff"/>


    <TextView
        android:id="@+id/actualPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="You tipped: "
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOut" />

    <TextView
        android:id="@+id/tipOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:text="Tip is:"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calButton" />

    <EditText
        android:id="@+id/actualPercentTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Your actual tip %"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintStart_toStartOf="@+id/tipOutText"
        app:layout_constraintTop_toBottomOf="@+id/tipOutText"
        app:backgroundTint="#ffffff"/>

    <EditText
        android:id="@+id/tipOutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Your tip appears here"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#CDDC39"
        app:layout_constraintStart_toStartOf="@+id/roundToText"
        app:layout_constraintTop_toBottomOf="@+id/calButton"
        app:backgroundTint="#ffffff"
    />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="66dp"
        android:layout_marginTop="132dp"
        app:layout_constraintStart_toEndOf="@+id/fillInPItch"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconfinder_money_299107" />

</android.support.constraint.ConstraintLayout>